fix the styling because too much space between element by adjusting margin or padding and setting height

--- a/client/src/components/Basket/Submenu/basketSubmenu.css
+++ b/client/src/components/Basket/Submenu/basketSubmenu.css
@@ -46,6 +46,7 @@
 .basketMenu__total span {
   display: flex;
   justify-content: space-between;
+  height: 50px;
 }
 
 .basketMenu__total-cost span p:first-child,
@@ -96,12 +97,13 @@
 .basketSubmenu {
   display: flex;
   gap: 0.5rem;
-  margin-bottom: 0.5rem;
+  width: 100%;
+  height: 150px;
   cursor: pointer;
 }
 .basketSubmenu img {
   width: 100px;
-  height: 150px;
+  height: 130px;
   margin-right: 0.5rem;
 }
 
@@ -109,7 +111,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 0.75rem;
+  gap: 0.3rem;
 }
 
 .basketSubmenu__info span {
@@ -117,6 +119,9 @@
   font-weight: 400;
   font-size: 17px;
   line-height: 20px;
+}
+.basketSubmenu__info span:first-child {
+  font-weight: 500;
 }
 
 .basketSubmenu__info span:nth-child(2) {
